# calcio

./: .gitignore  ALEMBIC_OPENSHIFT.md  HIGH_PRIORITY_IMPROVEMENTS.md  IMPROVEMENTS.md  PLAYER_PROFILES_DESIGN.md  README.md  REVIEW.md  SESSION_TEMPLATE_DESIGN.md  SESSION_TEMPLATE_EXAMPLES.md  SESSION_TEMPLATE_IMPLEMENTATION.md
.github/workflows/: build-images.yml
backend/: .dockerignore  DATABASE_OPERATIONS_AUDIT.md  Dockerfile  README.md  README_MIGRATIONS.md  README_ROOT_USER.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/scripts/: run-migration.sh
backend/alembic/versions/: 001_add_session_templates.py  002_add_user_accounts.py  003_add_root_user_field.py  004_add_deleted_at_to_players.py  005_add_deleted_at_to_users.py
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/auth/: dependencies.py  schemas.py  security.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/routers/: auth.py  matches.py  players.py  sessions.py  templates.py
backend/app/services/: ratings.py  team_balance.py  template_service.py
backend/app/tests/: conftest.py  test_schemas.py  test_team_balance.py
backend/scripts/: create_root_user.py
frontend/: .dockerignore  Dockerfile  PERFORMANCE_IMPROVEMENTS.md  README.md  package.json  tsconfig.json
frontend/public/: config.template.js  index.html
frontend/src/: App.css  App.tsx  AppContent.tsx  index.css  main.tsx
infra/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
infra/k8s/: DEPLOYMENT_SUMMARY.md  (+5 more)
(+37 files in other folders)
