[project]
name = "calcio-backend"
version = "0.1.0"
description = "FastAPI backend for the Calcio futsal session manager"
authors = [{ name = "Calcio" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "asyncpg",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
